Add question image fields to card
